--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <version>0.1.0</version>
   <description>The KURI MBZIRC SIM based on JSK's project</description>
 
-  <maintainer email="tarek@tarektaha.com">Moju Zhao</maintainer>
+  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
 
   <license>BSD</license>
 
