Changed arena texture to asphalt

--- a/gazebo_models/models/arena/model.config
+++ b/gazebo_models/models/arena/model.config
@@ -1,11 +1,21 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
+
 <model>
-    <name>arena</name>
-    <version>1.0</version>
-    <sdf version="1.4">model.sdf</sdf>
-    <author>
-        <name>Moju Zhao</name>
-        <email>chou@jsk.imi.i.u-tokyo.ac.jp</email>
-    </author>
-    <description>mbzirc-jsk</description>
+  <name>arena</name>
+  <version>1.1</version>
+  <sdf version="1.4">model.sdf</sdf>
+
+  <author>
+    <name>Moju Zhao</name>
+    <email>chou@jsk.imi.i.u-tokyo.ac.jp</email>
+  </author>
+  <author>
+    <name>Abdullah Abduldayem</name>
+    <email>abdullah.dayem@kustar.ac.ae</email>
+  </author>
+
+  <description>
+    The MBZIRC arena. Asphalt texture taken from https://github.com/PX4/sitl_gazebo/tree/master/models/asphalt_plane
+  </description>
+
 </model>
