--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
   - sudo apt-get install ros-indigo-gazebo7-ros-pkgs ros-indigo-gazebo7-ros-control libgazebo7-dev
   # Install Firmware-needed libraries:
   - sudo apt-get install python-argparse git-core wget zip python-empy qtcreator cmake build-essential genromfs -y
-  - sudo apt-get install ant protobuf-compiler libeigen3-dev libopencv-dev openjdk-8-jdk openjdk-8-jre clang-3.5 lldb-3.5 -y
+  - sudo apt-get install ant protobuf-compiler libeigen3-dev libopencv-dev clang-3.5 lldb-3.5 -y
 # Use this to install any prerequisites or dependencies necessary to run your build
 install: 
   # Create workspace
