--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
 
   <build_depend>geometry_msgs</build_depend>
   <build_depend>gazebo_ros</build_depend>
+  <build_depend>mavros_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>gazebo_plugins</run_depend>
